syntax = "proto3";

option java_package = "im.ghasedak.rpc.sequence";
option java_multiple_files = true;

option (scalapb.options) = {
  flat_package: true
};

import "scalapb/scalapb.proto";

import "api/sequence.proto";

service SequenceService {
    rpc GetDifference (ApiSeqState) returns (ResponseGetDifference);
}

message ResponseGetDifference {
    ApiSeqState seq_state = 1;
    ApiUpdateContainer update = 2;
}